--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,11 +7,11 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
-                <div class="site-heading">
-                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
-                    <!--<hr class="small">-->
-                    <span class="subheading">{{ page.description }}</span>
-                </div>
+                <!--<div class="site-heading">-->
+                    <!--<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>-->
+                    <!--&lt;!&ndash;<hr class="small">&ndash;&gt;-->
+                    <!--<span class="subheading">{{ page.description }}</span>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
