--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -19,6 +19,7 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/prettify.css" rel="stylesheet" type="text/css">
     <script src="{{ ASSET_PATH }}/js/prettify.js"></script>
+    <script src="{{ ASSET_PATH }}/js/scrollHandler.js"></script>
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images -->
     <link rel="shortcut icon" href="images/favicon.ico">
