--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -59,8 +59,7 @@
       <footer class="card clearfix">
         <span style="font-size:30px;"class="fa fa-github pull-left"></span><a href="https://wuchao.github.io" style="display:inline-block;padding-right:80px;border-right:1px solid #bbb">fork me on GitHub</a>
         <p class="pull-right">&copy; 2011 {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          forked from <a href="https://enml.github.io/site/" target="_blank" title="https://enml.github.io/site/">https://enml.github.io/site/</a>
         </p>
         
       </footer>
